# auto-research

./: .gitignore  AGENTS.md  README.md  demo-linux-cpu.sh  demo-linux-gpu.sh  demo-mac.sh  demo.sh  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
assets/: llm_recsys_industrial_review_full_en.tex  llm_recsys_industrial_review_full_feishu_light.md  llm_recsys_industrial_review_full_zh.tex
docs/: architecture.md  auto-research.md  getting-started.md  index.md  model-evolution.md  project-readme.md  reproduction-results.md  runtime.md  unirank.md
docs/design/: automated-w2s-adoption.md
docs/evolution/: micro-llm-wikitext2-diagnostic-seed42.json  public-suite-smoke-seed42.json  rankmixer-movielens-2g3p-seed42.json
docs/reproductions/: 2026-07-meta-online-ab-selection.md  2026-google-meta-online-ab-selection.md  README.md  blog-llm-rec-industrial-audit.md  din-fair-benchmark.md  industrial-online-ab-selection.md  recent-industrial-llm-rec-2026-07.md
scripts/: __init__.py  download_public_data.sh  run-platform-demo.sh  sync_project_readme.py  sync_reproduction_metadata.py
src/auto_research/: __init__.py  cli.py  config.py  datasets.py  experiments.py  models.py  paper_methods.py  papers.py  publish.py  report.py  runner.py  runtime.py  spaces.py
tests/: test_command_proposer.py  test_docs_math.py  test_experiments.py  test_llm_evolution.py  test_model_evolution.py  test_paper_methods.py  test_papers.py  test_platform_demos.py  test_project_readme_sync.py  test_research_loop.py  test_runner.py  test_runtime.py  test_spaces.py
(+661 files in other folders)
