[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-research"
version = "0.1.0"
description = "A local-first, reproducible research loop for ML topics"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = ["numpy>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
auto-research = "auto_research.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
